objects/Recurring_Donation_Batch_Errors__c.object
<CustomObject>
    <description>Error Logs</description>
    <fields>
        <fullName>Error_Context__c</fullName>
        <label>Error Context</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventDetails__c</fullName>
        <label>Error Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity with error</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Recurring_Donation_Batch_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pledge_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pledge Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Pledge</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EventDetails__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/1/2021 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RD-{DD}-{MM}-{0000}</displayFormat>
        <label>ERROR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>